--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
   <div class="container">
-    <img src="../imgs/eu.jpg" alt="foto de perfil" />
+    <img src="imgs/eu.jpg" alt="foto de perfil" />
 
     <h1>Ana Clara</h1>
     <h3>Patos de Minas, Minas Gerais</h3>
